k8s/order-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress
  namespace: ea-project
  annotations:
    nginx.ingress.kubernetes.io/load-balance: round_robin
spec:
  ingressClassName: nginx
  rules:
    - host: local.pc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
